--- a/OnlineshopApplication/src/main/resources/application.properties
+++ b/OnlineshopApplication/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port = 8088
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/sprint2
+spring.datasource.url = jdbc:postgresql://localhost:5432/fullstack
 
 spring.datasource.username = postgres
-spring.datasource.password = Chinnu@2020
+spring.datasource.password = admin
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
